--- a/frontend/src/components/PlaylistMovie/PlaylistMovie.css
+++ b/frontend/src/components/PlaylistMovie/PlaylistMovie.css
@@ -1,3 +1,33 @@
 img {
-    width: 100px;
+    width: 200px;
+    height: 250px;
+    border-radius: 1em;
+}
+
+h2 {
+    padding-top: .5em;
+}
+.playlist-movie-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* width: 300px;*/
+    overflow: scroll;
+    scrollbar-color: #606060 #393939;
+}
+
+.movie-container {
+    background-color: #181818;
+    padding: 1em;
+    margin-left: .5em;
+    border-radius: 1em;
+    box-shadow: 1px 1px 10px 20px #1d1d1e;
+}
+
+.movie-container-font {
+    font-weight: bold;
+}
+
+.playlist-playlist-container {
+    background-color: #1d1d1e;
 }
