--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,6 +1,8 @@
 body {
     background-color: #d8dde3;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Wix Madefor Text", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     
 }
 
