--- a/frontend/src/components/MovieDetails/MovieDetails.css
+++ b/frontend/src/components/MovieDetails/MovieDetails.css
@@ -1,31 +1,122 @@
 .mainContainer {
     display: flex;
+  }
+  
+  
+.movieDetailsContainer {
+    margin: 1em;
+    padding: 1em;
+    background-color: #1d1d1e;
+    border-radius: 1em;
+    color: #767676;
+
 }
 
-.imgContainer {
+.movie-details-p {
+    margin: .5em;
+}
+
+.movie-details-h2 {
+    margin: 0;
+    padding-left: .3em;
+    padding-right: 1em;
+    padding-bottom: 1em;
+    padding-top: 1em;
+}
+
+  .imgContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.infoContainer {
-    padding-left: 2rem;
+  }
+  
+  .infoContainer {
+    padding-left: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-}
-
-.btnContainer {
+    justify-content: flex-start;
+  }
+  
+  .btnContainer {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding-top: 2rem;
-}
-
-.overviewContainer {
+    padding-top: .5em;
+    padding-bottom: .5em;
+  }
+  
+  .overviewContainer {
     padding: 1rem;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  
+  img {
+    width: 100%;
+  }
+
+  .img-container-p {
+    margin: 0;
+    padding-top: .5em;
+  }
+  
+  .btn {
+    /* Common button styles */
+    border: none;
+    cursor: pointer;
+    padding: 10px 10px;
+    border-radius: .5em;
+    text-decoration: none;
+  }
+  
+  .btn--doar {
+    color: #fff;
+    padding-right: 0;
+    background-color: #c0392b;
+    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 90%, 90% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 80% 100%, 0 100%);
+  }
+  
+  .btn--doar:hover {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%, 0 100%);
+  }
+  
+  
+  .btn--doar:after {
+    content: "\f004";
+    color: #e74c3c;
+    font-family: FontAwesome;
+    display: inline-block;
+    position: relative;
+    right: -55px;
+    transition: all 0.2s ease;
+  }
+  
+  .btn--doar:hover:after {
+    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 64 64'%3E%3Cpath fill='%23ff143a' fill-rule='evenodd' d='M12.65 16.684a12.488 12.488 0 0 0 0 17.653l1.758 1.765 17.588 17.653 17.587-17.653 1.759-1.765a12.488 12.488 0 0 0 0-17.653 12.376 12.376 0 0 0-17.588 0l-1.758 1.765-1.759-1.765a12.376 12.376 0 0 0-17.587 0z'%3E%3C/path%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.999' d='M14.14 29.77a8.497 8.497 0 0 1 0-8.497 8.497 8.497 0 0 1 7.36-4.249' opacity='.4'%3E%3C/path%3E%3Cpath fill='%23d30045' fill-rule='evenodd' d='M21.444 13.015a12.372 12.372 0 0 0-8.794 3.666 12.634 12.634 0 0 0-1.347 1.62c.02-.02.02-.023.032-.035a11.297 11.297 0 0 1 16.053 0l2.372 2.392 1.605-1.613c.206-.207.423-.394.64-.581L30.24 16.68a12.372 12.372 0 0 0-8.794-3.667zm21.103 0c-2.592 0-5.176.826-7.365 2.452a11.286 11.286 0 0 1 11.469 2.8 11.397 11.397 0 0 1 0 16.111l-1.605 1.613-15.374 15.432 2.323 2.332L49.583 36.1l1.757-1.766a12.49 12.49 0 0 0 0-17.654 12.372 12.372 0 0 0-8.793-3.666z'%3E%3C/path%3E%3C/svg%3E");
+    width: 24px;
+    height: 24px;
+    vertical-align: middle; /* Align the heart icon vertically */
+    margin-right: 5px; /* Adjust margin for spacing between icon and text */
+    /* margin-top: -1px; 
+    margin-bottom: -5px; */
+    margin-left: 5px;
+    margin-right: 5px; 
+    right: 0px;
+  }
+
+  .btn--goback {
+    color: #fff;
+    border-radius: .5em;
+    padding: 10px 10px; /* Adjust padding to match the playlist button */
+    font-size: 16px; /* Adjust font size to match the playlist button */
+    background-color: #c0392b;
+    border: none;
+    position: relative; /* Add relative positioning */
+    transition: transform 0.2s ease-in-out;
 }
 
-img {
-    width: 100%;
+.btn--goback:hover {
+    transform: scale(1.1);
 }
