--- a/frontend/src/components/Search/Search.css
+++ b/frontend/src/components/Search/Search.css
@@ -35,6 +35,7 @@
     border: none;
 }
 
+
 .arrow-icon {
     background-color: none;
     border: none;
@@ -72,6 +73,23 @@
     justify-content: center; 
     align-items: center; 
 }
+
+.popular-movies-title-search-results {
+    background-color: #d8dde3;
+    color: #000000;
+    font-weight: bold;
+    font-size: medium;
+    margin: 0 auto; 
+    margin-top: 1em;
+    margin-bottom: 1em;
+    border-radius: 1em;
+    width: 50%;
+    height: 50px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+}
+
 
 .popularMoviesContainer, .searchedMoviesContainer {
     text-align: center;
