--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,3 +1,14 @@
+html,
 body {
-    margin: 0;
+  margin: 0;
+  max-width: 100vw;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.app {
+  height: 100vh;
+  width: 100vw;
 }
