--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,1 +1,56 @@
+.nav {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 100vw;
+  gap: 1rem;
+  height: 64px;
+  padding: 0 1rem 0 1rem;
+  background-color: rgba(0, 0, 0, 0.9);
+  backdrop-filter: blur(6px);
+}
 
+.nav .nav-right {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.nav ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  gap: 2rem;
+}
+
+.nav a,
+p {
+  color: white;
+  font-size: 0.9rem;
+  text-decoration: none;
+}
+
+.nav .nav-logo {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.nav .avatar {
+  position: relative;
+  width: 48px;
+  height: 48px;
+  background: white;
+  border-radius: 100%;
+  overflow: hidden;
+}
+
+.nav .avatar img {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+}
