--- a/frontend/src/components/AdvancedSearch/AdvancedSearch.css
+++ b/frontend/src/components/AdvancedSearch/AdvancedSearch.css
@@ -1,15 +1,14 @@
 label {
     margin-right: 5px;
 }
-
 .advanced-search-body {
     background-image: url(new-magnifying-glass-seamless-pattern-vector-4302982.jpg);
     background-repeat: repeat;
     background-size: 500px;
     padding-bottom: 3.4em;
     padding-top: 1em;
+    padding-bottom: 18em;
 }
-
 .advanced-search-form-container {
     margin: 2em;
     padding: 2em;
@@ -18,31 +17,25 @@ label {
     height: auto;
     display: flex;
     justify-content: center;
-    background-color: #1d1d1e;
-    
+    background-color: #1D1D1E;
 }
-
 .actor-search-box {
     display: flex;
 }
-
 .release-dates-container {
     display: flex;
     flex-direction: column;
 }
-
 .release-date-before, .release-date-after {
     display: flex;
     float: right;
     text-align: left;
 }
-
 .genre-checkboxes-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 .genre-checkboxes {
     display: flex;
     flex-direction: column;
@@ -57,46 +50,39 @@ label {
     padding: 1em;
     margin-right: .7em;
 }
-
 .genre-checkbox {
     margin-right: 20px;
 }
-
 .submit-button {
     display: flex;
     justify-content: center;
     margin-top: 16px;
 }
-
 /* .preSearch {
     display: flex;
     flex-direction: column;
     align-items: center;
     bottom: 40%;
 }
-
 .preSearch img {
     width: 150px;
     height: 150px;
 } */
-
 .filteredMoviesContainer {
     text-align: center;
 }
-
 .page-info-advanced-search {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: #1d1d1e;
+    background-color: #1D1D1E;
     padding-top: 1em;
     padding-bottom: 1em;
 }
-
 .movieCoversContainer-advanced-search {
     display: grid;
-    background-color: #1d1d1e;
+    background-color: #1D1D1E;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 5px; /* Adjust the gap between movies */
     justify-items: center;
@@ -104,7 +90,6 @@ label {
     padding-left: .5em;
     padding-right: .5em;
 }
-
 .input-style {
     border-radius: .5em;
     margin-bottom: .5em;
@@ -112,7 +97,6 @@ label {
     text-align: left;
     border: none;
 }
-
 .input-label {
     color: white;
     border-radius: .5em;
@@ -120,23 +104,21 @@ label {
     padding: .5em;
     text-align: left;
 }
-
 .page-info-advanced-search {
     color: black;
     padding-left: .5em;
     padding-right: .5em;
 }
-
 .advanced-search-search-results-title {
-    background-color: #1d1d1e;
+    background-color: #1D1D1E;
     color: white;
     font-weight: bold;
     font-size: medium;
-    margin: 0 auto; 
+    margin: 0 auto;
     width: 100%;
     height: 50px;
     display: flex;
-    justify-content: center; 
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     padding-top: 0;
 }
