--- a/frontend/src/components/MovieDetails/MovieDetails.css
+++ b/frontend/src/components/MovieDetails/MovieDetails.css
@@ -121,3 +121,16 @@
 .btn--goback:hover {
     transform: scale(1.1);
 }
+
+.success-message-container {
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  align-items: center;
+  margin: auto;
+  padding: 20px;
+  border: #1d1d1e solid 2px;
+  border-radius: .5em;
+  color: white;
+}
