--- a/frontend/src/components/MovieDetails/MovieDetails.css
+++ b/frontend/src/components/MovieDetails/MovieDetails.css
@@ -134,3 +134,16 @@
   border-radius: .5em;
   color: white;
 }
+
+.error-message-container {
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  align-items: center;
+  margin: auto;
+  padding: 20px;
+  border: #1d1d1e solid 2px;
+  border-radius: .5em;
+  color: white;
+}
