--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #d8dde3;
+  background: linear-gradient(to bottom, #d8dde3, #6d90b9);
+  /* padding-bottom: 10em; */
     font-family: "Wix Madefor Text", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
