--- a/frontend/src/components/PlaylistMovieUser/PlaylistMovieUser.css
+++ b/frontend/src/components/PlaylistMovieUser/PlaylistMovieUser.css
@@ -59,3 +59,72 @@ h3 {
     padding: 0;
 
 }
+
+.playlist-name-and-delete-playlist-movie-user {
+    display: flex;
+    flex-direction: row;
+}
+
+
+.glow-on-delete {
+    width: 100px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #767676;
+    font-size: small;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    margin-top: 1.5em;
+    margin-left: 1em;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-delete:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-delete:active {
+    color: #000
+}
+
+.glow-on-delete:active:after {
+    background: transparent;
+}
+
+.glow-on-delete:hover:before {
+    opacity: 1;
+}
+
+.glow-on-delete:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
