--- a/frontend/src/components/SignUp/SignUpForm.css
+++ b/frontend/src/components/SignUp/SignUpForm.css
@@ -7,7 +7,11 @@
 .sign-up-form {
   display: grid;
   gap: 1rem;
-  max-width: 300px;
+  max-width: 500px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  border-radius: 8px;
 }
 
 .sign-up-form p.form-error {
@@ -15,12 +19,12 @@
 }
 
 button {
-  padding: 10px;
-  margin: 8px 0;
+  padding: 15px;
+  margin: 10px 0;
   cursor: pointer;
   border: none;
-  border-radius: 4px;
-  font-size: 16px;
+  border-radius: 5px;
+  font-size: 17px;
   background-color: #d8dde4;
   color: rgb(0, 0, 0);
   border: 2px solid black;
